tests/macros/float/mask.rs
fn main() {
    let q = inquisition::questions![float { mask: todo!() }];
}
